--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "p-queue": "^8.1.0"
   },
   "scripts": {
+    "start": "node Backend/server.js", 
     "start:backend": "node Backend/server.js",
     "start:frontend": "npm run dev --prefix Frontend"
   }
