--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -2,14 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "package.json",
+      "src": "./package.json",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "(.*)",
-      "dest": "index.html"
+      "dest": "./index.html"
     }
   ]
 }
