--- a/Frontend/vercel.json
+++ b/Frontend/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "Frontend/package.json",
+      "src": "package.json",
       "use": "@vercel/node"
     },
     {
@@ -17,7 +17,7 @@
     },
     {
       "src": "(.*)",
-      "dest": "Frontend/index.html"
+      "dest": "index.html"
     }
   ]
 }
